# scikit-learn-ts

./: .eslintrc.json  .gitignore  .npmrc  .prettierignore  contributing.md  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  requirements.txt  tsconfig.base.json  tsconfig.generator.json  tsconfig.json  tsup.config.ts  typedoc.json  vitest.config.ts
.github/workflows/: test.yml
docs/: next.config.mjs  package.json  readme.md  styles.css  tailwind.config.js  theme.config.tsx
docs/components/: counters.tsx
docs/pages/: _app.mdx  _app.tsx  _document.tsx  _meta.json  _meta.ts  _meta.tsx  another.mdx  credit.md  index.md  license.md  status.md
docs/pages/docs/: README.md  _meta.json  _meta.ts  globals.md  modules.md
docs/pages/docs/classes/: ARDRegression.md  AdaBoostClassifier.md  AdaBoostRegressor.md  AdditiveChi2Sampler.md  AffinityPropagation.md  AgglomerativeClustering.md  BaggingClassifier.md  BaggingRegressor.md  BallTree.md  BayesianGaussianMixture.md  BayesianRidge.md  BernoulliNB.md  BernoulliRBM.md  Binarizer.md  Birch.md  BisectingKMeans.md  Bunch.md  CCA.md  CalibratedClassifierCV.md  CalibrationDisplay.md  CategoricalNB.md  ClassifierChain.md  ColumnTransformer.md  ComplementNB.md  CompoundKernel.md  (+244 more)
docs/pages/guide/: _meta.json  _meta.ts  examples.md  how-it-works.md  install.md  license.md  motivation.md  restrictions.md  usage.md
lib/: index.ts  python.ts  types.ts
sklearn/: types.ts
src/: formatter.ts  generator.ts  parser.test.ts  parser.ts  types.ts  utils.ts
test/: KMeans.ts  MinMaxScaler.ts  StandardScaler.ts  TSNE.test.ts
(+1595 files in other folders)
