[tool.poetry]
name = "scikit-learn-ts"
version = "0.1.0"
description = ""
authors = ["Travis Fischer <fisch0920@gmail.com>"]
readme = "README.md"
packages = [{include = "scikit_learn_ts"}]

[tool.poetry.dependencies]
python = ">=3.11,<=3.11.2"
numpy = "^1.24.2"
scikit-learn = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
