[tool.poetry]
name = "scikit-learn-ts"
version = "0.1.0"
description = ""
authors = ["Travis Fischer <fisch0920@gmail.com>"]
readme = "README.md"
packages = [{include = "scikit_learn_ts"}]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.19.5"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
